@@ -31,11 +31,12 @@ WriteMakefile(
     PREREQ_PM         => {
         parent                      => 0,
         'RPi::ADC::ADS'             => 1.01,
+        'RPi::ADC::MCP3008'         => 2.3603,
         'RPi::BMP180'               => 2.3603,
         'RPi::DAC::MCP4922'         => 2.3604,
         'RPi::DigiPot::MCP4XXXX'    => 2.3603,
         'RPi::DHT11'                => 1.02,
-        'RPi::ADC::MCP3008'         => 2.3603,
+        'RPi::LCD'                  => 2.3601,
         'RPi::SPI'                  => 2.3606,
         'RPi::WiringPi::Constant'   => 0.02,
         'WiringPi::API'             => 2.3609,
