@@ -1,14 +1,15 @@
 Revision history for Perl extension RPi::WiringPi.
 
 2.3612 UNREL
-        - ***test for CI***
         - added check in cleanup() so we don't throw undef warnings if there
           weren't any pins registered during the program run
         - added DAC test file
         - add parent.pm as a prereq to make things 5.8.9 compliant
         - remove rogue "use feature 'say'" lines from tests for 5.8.9 compliance
         - fixed git links in Makefile.PL. They were pointing to the old p5- repo
-
+        - deleted RPi::WiringPi::LCD, and turned it into a standalone dist,
+          RPi::LCD
+        - we now require RPi::LCD v2.3601
 2.3611  2017-03-26
         - added fritzing and breadboard layout for the ADC/DAC test
           configuration for brewbuild CI
